Slim this down a smidgen to avoid forcing a horizontal scrollbar on Joonix.

--- a/src/gwt/public/global/gwt.css
+++ b/src/gwt/public/global/gwt.css
@@ -1012,7 +1012,7 @@ img, embed, applet, object {
 }
 
 .messagePanel .Scroller {
-  width: 565px;
+  width: 562px;
 }
 
 .messagePanel .Text {
